# clamped

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: clamp_fn.rs  clamp_trait.rs  lib.rs
